[package]
name = "brigade"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Winkler <pascal.winkler@uni-due.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
incremental = true
#lto = true
codegen-units = 1
panic = "abort"
warn = ["all"]

[package.metadata.cargo-aliased]
run = "sccache cargo run"

[dependencies]
serde = {version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
ws = "0.9.2"
thiserror = "1.0.41"
regex = "1.9.1"
lazy_static = "1.4.0"
futures = "0.3.25"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha3 = "0.10.8"
ethnum = { version = "1.3.2", features = ["serde", "macros"] }
owo-colors = "3.5.0"
hex = "0.4.3"
clap = { version = "4.3.21", features = ["derive"] }
chrono = "0.4"